[tool.poetry]
name = "evervault"
version = "3.0.0"
description = "Evervault SDK"
authors = ["Evervault <engineering@evervault.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://evervault.com"
repository = "https://github.com/evervault/evervault-python"

[tool.poetry.dependencies]
python = "^3.7.0"
requests = "^2.24.0"
cryptography = "^41.0.0"
certifi = "*"
pycryptodome = "^3.10.1"
pyasn1 = "^0.4.8"
evervault-attestation-bindings = "0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-socket = "^0.4.1"
requests-mock = "^1.9.3"
python-semantic-release = "^7.19.2"
flake8 = "^5.0.4"
black = "^22.3.0"

[pytest]
testpath = "tests"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']

[tool.semantic_release]
version_variable = [ "evervault/__init__.py:__version__" ]
version_toml = [ "pyproject.toml:tool.poetry.version" ]
major_on_zero = true
branch = "master"
upload_to_pypi = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
